# service-status-monitor

./: ARCHITECTURE.md  DESIGN_DECISIONS.md  GITHUB_SETUP.md  LICENSE  README.md  pyproject.toml
status-monitor/: .env.example  requirements.txt  run.py  setup.py  test_adapters.py  test_run.py
status-monitor/examples/: async_watcher.py  sync_watcher.py  usage_demo.py
status-monitor/src/: main.py
status-monitor/src/adapters/: base.py  bolna_adapter.py  claude_adapter.py  openai_adapter.py  registry.py  rss_adapter.py
status-monitor/src/config/: settings.py
status-monitor/src/core/: formatter.py  incident.py  watcher.py
status-monitor/src/utils/: http_client.py  logger.py  rss_parser.py
status-monitor/tests/: conftest.py
status-monitor/tests/test_adapters/: test_openai_adapter.py
status-monitor/tests/test_core/: test_watcher.py
